using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;
internal class AnimationStrings
{
    internal static string isMoving = "IsMoving";

    internal static string isRunning = "IsRunning";
    internal static string isGrounded = "IsGrounded";
    internal static string isOnCelling = "IsOnCelling";
    internal static string yVelocity = "yVelocity";
    internal static string jumpTrigger = "jump";
    internal static string isOnWall= "IsOnWall";
    internal static string attackTrigger = "attack";
    internal static string canMove = "canMove";
    internal static string AttackIndex = "AttackIndex";
    internal static string SkillID = "SkillID";
    internal static string isAlive = "IsAlive";
    internal static string hitTrigger = "hit";
    internal static string lockVelocity = "lockVelocity";
    internal static string collideTrigger = "CollideTrigger";   // Trigger của projectile khi va chạm

}

